added error boundaries

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,10 @@
 
 body {
 	font-family: sans-serif;
-	background: linear-gradient(to left, rgb(9, 34, 105) 0%, rgba(0, 128, 128, 1) 100%);
+	background: linear-gradient(to left, rgb(12, 47, 142) 0%, rgba(0, 128, 128, 1) 100%);
 }
 
-h2 {
+.nonCardH2 {
 	color: #212121;
 	text-shadow:1px 1px #666666;
 }
