--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -10,4 +10,6 @@ h1 {
     font-weight: 200;
     color: #0ccac4;
     text-shadow: 3px 3px #000000;
+    margin: 0;
+    padding: 0.67em 0 0.3em 0;
 }
